# SCHC-Contribution

./: .gitignore  CMakeLists.txt  README.md
Client-Server-App/: CMakeLists.txt  Client.cpp  Server.cpp
Entities/: CMakeLists.txt  Rule.cpp  Rule.h  SigFoxProfile.cpp  SigFoxProfile.h  exceptions.cpp  exceptions.h
Google_tests/: CMakeLists.txt  castingTest.cpp
Google_tests/Entities/: ruleTest.cpp  sigFoxProfileTest.cpp
Google_tests/Messages/: ACKHeaderTest.cpp  ACKTest.cpp  fragmentHeaderTest.cpp  fragmentTest.cpp  headerTest.cpp  senderAbortTest.cpp
Google_tests/db/: dbTest.cpp
Google_tests/sockets/: sigFoxSocketTest.cpp
Google_tests/utils/: castingTest.cpp  miscTest.cpp
Messages/: ACK.cpp  ACK.h  ACKHeader.cpp  ACKHeader.h  CMakeLists.txt  Fragment.cpp  Fragment.h  FragmentHeader.cpp  FragmentHeader.h  Header.cpp  Header.h  SenderAbort.cpp  SenderAbort.h
config/: CMakeLists.txt  schc.cpp  schc.h
db/: CMakeLists.txt  CommonFileStorage.cpp  CommonFileStorage.h  FileStorage.cpp  FileStorage.h
sockets/: CMakeLists.txt  SigfoxSocket.cpp  Socket.cpp  Socket.h  sigFoxClient.cpp  sigFoxClient.h  sigFoxServer.cpp  sigFoxServer.h  socket.cpp
utils/: CMakeLists.txt  casting.cpp  casting.h  misc.cpp  misc.h  nestedDict.cpp  nestedDict.h
